pt_lightning_sphinx_theme/static/css/theme.css
/* ... */
.email-subscribe-form-fields-wrapper {
  position: relative;
}

.anchorjs-link {
  color: #6c6c6d !important;
}
@media screen and (min-width: 768px) {
  .anchorjs-link:hover {
    color: inherit;
    text-decoration: none !important;
  }
}

.pytorch-article #table-of-contents {
  display: none;
}

code, kbd, pre, samp {
  font-family: IBMPlexMono,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
}
code span, kbd span, pre span, samp span {
  font-family: IBMPlexMono,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
}

pre {
  padding: 1.125rem;
  background-color: #f3f4f7;
}
pre code {
  font-size: 0.875rem;
}
pre.highlight {
  background-color: #f3f4f7;
  line-height: 1.3125rem;
}

code.highlighter-rouge {
  color: #6c6c6d;
  background-color: #f3f4f7;
  padding: 2px 6px;
}

a:link code.highlighter-rouge,
a:visited code.highlighter-rouge,
a:hover code.highlighter-rouge {
  color: #4974D1;
}
a:link.has-code,
a:visited.has-code,
a:hover.has-code {
  color: #4974D1;
}

p code,
h1 code,
h2 code,
h3 code,
h4 code,
h5 code,
h6 code {
  font-size: 78.5%;
}

pre {
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

.header-holder {
  height: 68px;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  left: 0;
  margin-left: auto;
  margin-right: auto;
  position: fixed;
  right: 0;
  top: 0;
  width: 100%;
  z-index: 9999;
  background-color: #ffffff;
  border-bottom: 1px solid #e2e2e2;
}
@media screen and (min-width: 1100px) {
  .header-holder {
    height: 90px;
  }
}

.header-container {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.header-container:before, .header-container:after {
  content: "";
  display: table;
}
.header-container:after {
  clear: both;
}
.header-container {
  *zoom: 1;
}
@media screen and (min-width: 1100px) {
  .header-container {
    display: block;
  }
}

.header-logo {
  height: 27px;
  width: 300px;
  background-image: url(../images/logo.svg);
  background-position: left;
  background-size: 220px,220px;
  background-repeat: no-repeat;
  display: block;
  float: left;
  z-index: 10;
}

.main-menu-open-button {
  background-image: url("../images/icon-menu-dots.svg");
  background-position: center center;
  background-size: 25px 7px;
  background-repeat: no-repeat;
  width: 25px;
  height: 17px;
  position: absolute;
  right: 0;
  top: 4px;
}
@media screen and (min-width: 1100px) {
  .main-menu-open-button {
    display: none;
  }
}

.header-holder .main-menu {
  display: none;
}
@media screen and (min-width: 1100px) {
  .header-holder .main-menu {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
  }
}
.header-holder .main-menu ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 0;
}
.header-holder .main-menu ul li {
  display: inline-block;
  margin-right: 40px;
  position: relative;
}
.header-holder .main-menu ul li.active:after {
  content: "•";
  bottom: -24px;
  color: #e44c2c;
  font-size: 1.375rem;
  left: 0;
  position: absolute;
  right: 0;
  text-align: center;
}
.header-holder .main-menu ul li.active a {
  color: #e44c2c;
}
.header-holder .main-menu ul li:last-of-type {
  margin-right: 0;
}
.header-holder .main-menu ul li a {
  color: #ffffff;
  font-size: 1.125rem;
  letter-spacing: 0;
  line-height: 2.125rem;
  text-align: center;
  text-decoration: none;
}
@media screen and (min-width: 1100px) {
  .header-holder .main-menu ul li a:hover {
    color: #e44c2c;
  }
}

.mobile-main-menu {
  display: none;
}
.mobile-main-menu.open {
  background-color: #262626;
  display: block;
  height: 100%;
  left: 0;
  margin-left: auto;
  margin-right: auto;
  min-height: 100%;
  position: fixed;
  right: 0;
  top: 0;
  width: 100%;
  z-index: 99999;
}

.mobile-main-menu .container-fluid {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: 68px;
  position: relative;
}
.mobile-main-menu .container-fluid:before, .mobile-main-menu .container-fluid:after {
  content: "";
  display: table;
}
.mobile-main-menu .container-fluid:after {
  clear: both;
}
.mobile-main-menu .container-fluid {
  *zoom: 1;
}

.mobile-main-menu.open ul {
  list-style-type: none;
  padding: 0;
}
.mobile-main-menu.open ul li a {
  font-size: 2rem;
  color: #ffffff;
  letter-spacing: 0;
  line-height: 4rem;
  text-decoration: none;
}
.mobile-main-menu.open ul li.active a {
  color: #e44c2c;
}

.main-menu-close-button {
  background-image: url("../images/icon-close.svg");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 24px 24px;
  height: 24px;
  position: absolute;
  right: 0;
  width: 24px;
  top: -4px;
}

.mobile-main-menu-header-container {
  position: relative;
}

.mobile-main-menu-links-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding-left: 2.8125rem;
  height: 100%;
  min-height: 100%;
  margin-top: -68px;
}

.site-footer {
  padding: 2.5rem 0;
  width: 100%;
  background-image: url("../images/home-footer-background.jpg");
  background-size: 100%;
  margin-left: 0;
  margin-right: 0;
  position: relative;
  z-index: 201;
}
@media screen and (min-width: 768px) {
  .site-footer {
    padding: 5rem 0;
  }
}
/* ... */

